added hosted url

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <h1>GitHub Link: <a
-            href="https://github.com/emmanuel4365/task-mgt-sys">https://github.com/emmanuel4365/task-mgt-sys</a></h1>
+            href="https://github.com/Bestatayi/task-mgt-system">https://github.com/Bestatayi/task-mgt-system</a></h1>
     <br>
     <br>
     <br>
-    <form action="https://task-management-system-33mi.onrender.com/api/v1/login" method="post">
+    <form action="https://task-mgt-system.onrender.com/api/v1/login" method="post">
         <label for="email">
             Email
             <input type="email" name="email" id="email" required>
