--- a/public/html/callToRegister.html
+++ b/public/html/callToRegister.html
@@ -10,7 +10,7 @@
 <body>
     <h1>You are not a registered user!!!.</h1>
     <p>Please click the link below to register.</p>
-    <a href="https://task-management-system-33mi.onrender.com/html/register.html">Register</a>
+    <a href="https://task-mgt-system.onrender.com/html/register.html">Register</a>
 </body>
 
 </html>
