--- a/public/html/invalidPassword.html
+++ b/public/html/invalidPassword.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Invalid password or email!!!.</h1>
     <p>Please click the link below to register or login.</p>
-    <a href="https://task-management-system-33mi.onrender.com/html/register.html">Register</a><br>
+    <a href="https://task-mgt-system.onrender.com/html/register.html">Register</a><br>
     or <br>
-    <a href="https://task-management-system-33mi.onrender.com/">Login</a>
+    <a href="https://task-mgt-system.onrender.com/">Login</a>
 </body>
 
 </html>
