--- a/public/html/register.html
+++ b/public/html/register.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="https://task-management-system-33mi.onrender.com/api/v1/register" method="post">
+    <form action="https://task-mgt-system.onrender.com/api/v1/register" method="post">
         <label for="firstName">
             First Name
             <input type="text" name="firstName" id="firstName" required>
