--- a/public/html/taskList.html
+++ b/public/html/taskList.html
@@ -10,8 +10,8 @@
 <body>
     <h2 class="name-tag"></h2>
     <h1 class="name-tag2">Todo List</h1>
-    <a href="https://task-management-system-33mi.onrender.com/api/v1/logout">Logout</a>
-    <script src="https://task-management-system-33mi.onrender.com/js/start.js"></script>
+    <a href="https://task-mgt-system.onrender.com/api/v1/logout">Logout</a>
+    <script src="https://task-mgt-system.onrender.com/js/start.js"></script>
 </body>
 
 </html>
